# toronto-mobility-analytics

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  CLAUDE.md  CODEOWNERS  DESIGN-DOC.md  LICENSE  README.md  dashboard-design.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.example  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-dbt.yml  ci-lint.yml  ci-python.yml  governance.yml  security.yml
analyses/: bike_weather_correlation.sql  cross_modal_analysis.sql  daily_mobility_summary.sql  monthly_trends.sql  top_delay_stations.sql
dashboard/: app.py  requirements.txt  secrets.toml.example
docs/: OBSERVABILITY.md  PHASES.md  RUNBOOK.md  TESTS.md  index.html
macros/: _macros.yml  generate_schema_name.sql  get_date_spine.sql
queries/: dashboard_discovery.sql
scripts/: config.py  contracts.py  download.py  extract_station_names.py  generate_bike_station_ref.py  generate_date_spine.py  generate_delay_codes.py  generate_station_mapping.py  ingest.py  load.py  transform.py  validate.py  validate_load.py
seeds/: _seeds.yml  bike_station_ref.csv  date_spine.csv  ttc_delay_codes.csv  ttc_station_coords.csv  ttc_station_mapping.csv
setup/: create_ingestion_stage.sql  grants.sql  snowflake_init.sql  validate_infrastructure.sql
tests/: assert_bike_trips_reasonable_duration.sql  assert_daily_row_count_stability.sql  assert_no_future_dates.sql  assert_no_negative_delays.sql  assert_station_mapping_coverage.sql  conftest.py  test_download.py  test_generate_bike_station_ref.py  test_generate_date_spine.py  test_ingest.py  test_load.py  test_seeds.py  test_transform.py  test_validate.py
tools/: install-hooks.sh  protocol-zero.sh  run-checks.sh
(+83 files in other folders)
