[project]
name = "toronto-mobility-analytics"
version = "1.0.0"
description = "Data ingestion pipeline for Toronto Urban Mobility Analytics"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.3.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "snowflake-connector-python>=3.12.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.0,<10.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
exclude = [
    "^dbt_packages/",
    "^target/",
    "^logs/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "snowflake.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "dbt_packages",
    "target",
    "logs",
    ".claude/skills/skill-creator/scripts",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
